--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@radix-ui/react-dropdown-menu": "^2.1.7",
     "@tanstack/react-query": "^5.74.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
