--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "clsx": "^2.1.1",
     "firebase": "^11.8.1",
     "framer-motion": "^12.15.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.488.0",
     "react": "^19.0.0",
